--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
-{
+{ "scripts": {
+  "test": "echo \"Error: no test specified\" && exit 1",
+  "start": "node index.js"
+},
   "dependencies": {
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
