--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
-{ "scripts": {
+{  
+  "name": "loginpage",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "scripts": {
   "test": "echo \"Error: no test specified\" && exit 1",
   "start": "node index.js"
 },
+"author": "",
+"license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
